Pull ForeignCallsProvider and friends back into Graal