@@ -22,56 +22,45 @@
  */
 package com.oracle.graal.replacements.amd64;
 
-import static com.oracle.graal.compiler.target.Backend.ARITHMETIC_EXP;
-import static com.oracle.graal.replacements.amd64.AMD64MathIntrinsicNode.Operation.LOG;
-import static com.oracle.graal.replacements.amd64.AMD64MathIntrinsicNode.Operation.LOG10;
-import jdk.internal.jvmci.amd64.AMD64;
-import jdk.internal.jvmci.meta.JavaKind;
-import jdk.internal.jvmci.meta.LocationIdentity;
-import jdk.internal.jvmci.meta.ResolvedJavaMethod;
-import sun.misc.Unsafe;
+import jdk.internal.jvmci.amd64.*;
+import jdk.internal.jvmci.meta.*;
+import static com.oracle.graal.compiler.target.Backend.*;
+import static com.oracle.graal.replacements.amd64.AMD64MathIntrinsicNode.Operation.*;
+import sun.misc.*;
 
-import com.oracle.graal.compiler.common.spi.ForeignCallsProvider;
-import com.oracle.graal.graphbuilderconf.ForeignCallPlugin;
+import com.oracle.graal.compiler.common.spi.*;
+import com.oracle.graal.graphbuilderconf.*;
 import com.oracle.graal.graphbuilderconf.GraphBuilderConfiguration.Plugins;
-import com.oracle.graal.graphbuilderconf.GraphBuilderContext;
-import com.oracle.graal.graphbuilderconf.InvocationPlugin;
 import com.oracle.graal.graphbuilderconf.InvocationPlugin.Receiver;
-import com.oracle.graal.graphbuilderconf.InvocationPlugins;
 import com.oracle.graal.graphbuilderconf.InvocationPlugins.Registration;
-import com.oracle.graal.nodes.ValueNode;
-import com.oracle.graal.nodes.java.AtomicReadAndAddNode;
-import com.oracle.graal.nodes.java.AtomicReadAndWriteNode;
-import com.oracle.graal.nodes.memory.address.AddressNode;
-import com.oracle.graal.nodes.memory.address.OffsetAddressNode;
-import com.oracle.graal.replacements.IntegerSubstitutions;
-import com.oracle.graal.replacements.LongSubstitutions;
-import com.oracle.graal.replacements.StandardGraphBuilderPlugins.UnsafeGetPlugin;
-import com.oracle.graal.replacements.StandardGraphBuilderPlugins.UnsafePutPlugin;
-import com.oracle.graal.replacements.nodes.BitCountNode;
+import com.oracle.graal.nodes.*;
+import com.oracle.graal.nodes.java.*;
+import com.oracle.graal.nodes.memory.address.*;
+import com.oracle.graal.replacements.*;
+import com.oracle.graal.replacements.StandardGraphBuilderPlugins.*;
 
 public class AMD64GraphBuilderPlugins {
 
     public static void register(Plugins plugins, ForeignCallsProvider foreignCalls, AMD64 arch) {
         InvocationPlugins invocationPlugins = plugins.getInvocationPlugins();
-        registerIntegerLongPlugins(invocationPlugins, IntegerSubstitutions.class, JavaKind.Int, arch);
-        registerIntegerLongPlugins(invocationPlugins, LongSubstitutions.class, JavaKind.Long, arch);
+        registerIntegerLongPlugins(invocationPlugins, IntegerSubstitutions.class, Kind.Int, arch);
+        registerIntegerLongPlugins(invocationPlugins, LongSubstitutions.class, Kind.Long, arch);
         registerUnsafePlugins(invocationPlugins);
         registerMathPlugins(invocationPlugins, foreignCalls);
     }
 
-    private static void registerIntegerLongPlugins(InvocationPlugins plugins, Class<?> substituteDeclaringClass, JavaKind kind, AMD64 arch) {
+    private static void registerIntegerLongPlugins(InvocationPlugins plugins, Class<?> substituteDeclaringClass, Kind kind, AMD64 arch) {
         Class<?> declaringClass = kind.toBoxedJavaClass();
         Class<?> type = kind.toJavaClass();
         Registration r = new Registration(plugins, declaringClass);
-        if (arch.getFeatures().contains(AMD64.CPUFeature.LZCNT) && arch.getFlags().contains(AMD64.Flag.UseCountLeadingZerosInstruction)) {
+        if (arch.getFlags().contains(AMD64.Flag.UseCountLeadingZerosInstruction)) {
             r.register1("numberOfLeadingZeros", type, new InvocationPlugin() {
                 public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode value) {
                     ValueNode folded = AMD64CountLeadingZerosNode.tryFold(value);
                     if (folded != null) {
-                        b.addPush(JavaKind.Int, folded);
+                        b.addPush(Kind.Int, folded);
                     } else {
-                        b.addPush(JavaKind.Int, new AMD64CountLeadingZerosNode(value));
+                        b.addPush(Kind.Int, new AMD64CountLeadingZerosNode(value));
                     }
                     return true;
                 }
@@ -79,14 +68,14 @@ public class AMD64GraphBuilderPlugins {
         } else {
             r.registerMethodSubstitution(substituteDeclaringClass, "numberOfLeadingZeros", type);
         }
-        if (arch.getFeatures().contains(AMD64.CPUFeature.BMI1) && arch.getFlags().contains(AMD64.Flag.UseCountTrailingZerosInstruction)) {
+        if (arch.getFlags().contains(AMD64.Flag.UseCountTrailingZerosInstruction)) {
             r.register1("numberOfTrailingZeros", type, new InvocationPlugin() {
                 public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode value) {
                     ValueNode folded = AMD64CountTrailingZerosNode.tryFold(value);
                     if (folded != null) {
-                        b.addPush(JavaKind.Int, folded);
+                        b.addPush(Kind.Int, folded);
                     } else {
-                        b.addPush(JavaKind.Int, new AMD64CountTrailingZerosNode(value));
+                        b.addPush(Kind.Int, new AMD64CountTrailingZerosNode(value));
                     }
                     return true;
                 }
@@ -94,28 +83,19 @@ public class AMD64GraphBuilderPlugins {
         } else {
             r.registerMethodSubstitution(substituteDeclaringClass, "numberOfTrailingZeros", type);
         }
-
-        if (arch.getFeatures().contains(AMD64.CPUFeature.POPCNT)) {
-            r.register1("bitCount", type, new InvocationPlugin() {
-                public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode value) {
-                    b.push(JavaKind.Int, b.recursiveAppend(new BitCountNode(value).canonical(null, value)));
-                    return true;
-                }
-            });
-        }
     }
 
     private static void registerMathPlugins(InvocationPlugins plugins, ForeignCallsProvider foreignCalls) {
         Registration r = new Registration(plugins, Math.class);
         r.register1("log", Double.TYPE, new InvocationPlugin() {
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode value) {
-                b.push(JavaKind.Double, b.recursiveAppend(AMD64MathIntrinsicNode.create(value, LOG)));
+                b.push(Kind.Double, b.recursiveAppend(AMD64MathIntrinsicNode.create(value, LOG)));
                 return true;
             }
         });
         r.register1("log10", Double.TYPE, new InvocationPlugin() {
             public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver receiver, ValueNode value) {
-                b.push(JavaKind.Double, b.recursiveAppend(AMD64MathIntrinsicNode.create(value, LOG10)));
+                b.push(Kind.Double, b.recursiveAppend(AMD64MathIntrinsicNode.create(value, LOG10)));
                 return true;
             }
         });
@@ -129,8 +109,8 @@ public class AMD64GraphBuilderPlugins {
     private static void registerUnsafePlugins(InvocationPlugins plugins) {
         Registration r = new Registration(plugins, Unsafe.class);
 
-        for (JavaKind kind : new JavaKind[]{JavaKind.Int, JavaKind.Long, JavaKind.Object}) {
-            Class<?> javaClass = kind == JavaKind.Object ? Object.class : kind.toJavaClass();
+        for (Kind kind : new Kind[]{Kind.Int, Kind.Long, Kind.Object}) {
+            Class<?> javaClass = kind == Kind.Object ? Object.class : kind.toJavaClass();
 
             r.register4("getAndSet" + kind.name(), Receiver.class, Object.class, long.class, javaClass, new InvocationPlugin() {
                 public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver unsafe, ValueNode object, ValueNode offset, ValueNode value) {
@@ -141,7 +121,7 @@ public class AMD64GraphBuilderPlugins {
                     return true;
                 }
             });
-            if (kind != JavaKind.Object) {
+            if (kind != Kind.Object) {
                 r.register4("getAndAdd" + kind.name(), Receiver.class, Object.class, long.class, javaClass, new InvocationPlugin() {
                     public boolean apply(GraphBuilderContext b, ResolvedJavaMethod targetMethod, Receiver unsafe, ValueNode object, ValueNode offset, ValueNode delta) {
                         // Emits a null-check for the otherwise unused receiver
@@ -155,7 +135,7 @@ public class AMD64GraphBuilderPlugins {
             }
         }
 
-        for (JavaKind kind : new JavaKind[]{JavaKind.Char, JavaKind.Short, JavaKind.Int, JavaKind.Long}) {
+        for (Kind kind : new Kind[]{Kind.Char, Kind.Short, Kind.Int, Kind.Long}) {
             Class<?> javaClass = kind.toJavaClass();
             r.registerOptional3("get" + kind.name() + "Unaligned", Receiver.class, Object.class, long.class, new UnsafeGetPlugin(kind, false));
             r.registerOptional4("put" + kind.name() + "Unaligned", Receiver.class, Object.class, long.class, javaClass, new UnsafePutPlugin(kind, false));
